<resources>
    <string name="app_name">SugarSweet</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="sugarsweet">SugarSweet</string>
    <string name="diabetic">Diabetic</string>
    <string name="administrator">Administrator</string>
    <string name="log_in_as">Log in as:</string>
    <string name="title_activity_user_login">UserLoginActivity</string>
    <string name="login_as_administrator">Logging in as administrator</string>
    <string name="login_as_diabetic">Logging in as diabetic</string>
    <string name="password">Password</string>
    <string name="personalFactor">Personal Factor</string>
    <string name="submit">Submit</string>
    <string name="continue1">Continue</string>
    <string name="administrator_menu">Administrator Menu</string>
    <string name="diabetic_menu">Diabetic Menu</string>
    <string name="exercise_registration">EXERCISE REGISTRATION</string>
    <string name="exercise_insertion">EXERCISE INSERTION</string>
    <string name="ingredient_insertion">INGREDIENT INSERTION</string>
    <string name="meal_registration">MEAL REGISTRATION</string>
    <string name="personal_factor_alteration">PERSONAL FACTOR ALTERATION</string>
    <string name="statistics_review">STATISTICS REVIEW</string>
    <string name="sugar_measurement_registration">SUGAR MEASUREMENT REGISTRATION</string>
    <string name="insert">INSERT</string>
    <string name="cancel">CANCEL</string>
    <string name="consumption_per_minute">Consumption Per Minute</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="carbohydrates_per_gram">Carbohydrates Per Gram</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="please_provide_the_new_personal_factor">Please provide the new personal factor</string>
    <string name="number">number</string>
    <string name="the_registered_personal_factor_is">The registered personal factor is:</string>
    <string name="personal_factor">Personal Factor</string>
    <string name="insert_new_exercise">NEW EXERCISE</string>
    <string name="exercise_name_hint"><font size="15">ex. Walking, running, etc.</font></string>
    <string name="enter_glucose_consumption_per_minute"><font size="15">enter glucose consumption per minute</font></string>
    <string name="finish">FINISH</string>
    <string name="advice">ADVICE</string>
    <string name="insert_new_ingredient">NEW INGREDIENT</string>
    <string name="ex_milk_eggs_flour_etc">ex. Milk, eggs, flour, etc.</string>
    <string name="enter_carbohydrates_per_gram">enter carbohydrates per gram</string>
    <string name="sugar_level">Sugar Level</string>
    <string name="please_provide_your_current_sugar_level">Please provide your current sugar level</string>
    <string name="textview">TextView</string>
    <string name="press_the_button_to_see_the_advice">Press the button to see the advice</string>
    <string name="_3_high_intensity">3.High intensity</string>
    <string name="_2_medium_intensity">2.Medium intensity</string>
    <string name="_1_low_intensity">1.Low intensity</string>
    <string name="please_choose_the_statistics_you_want_to_review">Please choose the statistics you want to review</string>
    <string name="monthly_statistics">Monthly Statistics</string>
    <string name="weekly_statistics">Weekly Statistics</string>
    <string name="deviation_calculation">Deviation Calculation</string>
    <string name="average_measurement">AVERAGE MEASUREMENT</string>
    <string name="last_registered_measurement">LAST REGISTERED MEASUREMENT</string>
    <string name="deviation_of_the_two">DEVIATION OF THE TWO</string>
    <string name="press_the_button_to_exit_the_deviation_review">Press the button to exit the deviation review</string>
    <string name="exit">EXIT</string>
    <string name="please_provide_the_duration_of_the_exercise_in_minutes">Please provide the duration of the exercise in minutes</string>
    <string name="press_the_button_to_exit_the_weekly_review">Press the button to exit the weekly review</string>
    <string name="press_the_button_to_exit_the_monthly_review">Press the button to exit the monthly review</string>
    <string name="select_a_date_to_see_average_blood_sugar_levels">Select a date to see average blood sugar levels</string>
    <string name="monthly_average">Monthly Average:</string>
    <string name="weekly_average">Weekly Average:</string>
</resources>